--- a/ecommerce/style1.css
+++ b/ecommerce/style1.css
@@ -492,4 +492,30 @@ flex: 0.8;
       text-transform: uppercase;
   
   }
- 
+  h1 {
+    text-align: center;
+  }
+  
+  h2 {
+    margin-top: 20px;
+  }
+
+  p{
+    margin-bottom: 10px;
+            text-align: justify;
+  }
+
+  ol, ul {
+    text-align: left;
+    margin-left: 40px;
+}
+  
+  .content {
+    margin-top: 10px;
+    margin: 0;
+    padding: 20px;
+    font-family: Arial, sans-serif;
+    text-align:justify ;
+    line-height: 1.5;
+    font-size: large;
+  }
