--- a/ecommerce/style2.css
+++ b/ecommerce/style2.css
@@ -297,7 +297,7 @@ flex: 0.8;
 
 
 
-.image_url{
+.imagen{
   max-width: 100%;
 }
 
@@ -310,17 +310,7 @@ flex: 0.8;
 }
 
 .items{
-  width: 200px;
-  margin: 10px;
   border-radius: 10px;
-}
-
-.product-image{
-  max-width: 100%;
-  max-height: 200px;
-  object-fit: cover;
-  object-position: center;
- 
 }
 
 .items:hover{
@@ -356,7 +346,7 @@ flex: 0.8;
   line-height: 1.2; /* Ajusta el valor según tus preferencias */
 }
 
-.info-product  {
+.info-product h2 {
   margin-bottom: 5px; /* Ajusta el valor según tus preferencias */
 }
 
@@ -364,7 +354,6 @@ flex: 0.8;
   font-size: 18px;
   font-weight: 900;
   text-align: center;
-  background-color: #1f1515;
 }
 
 .info-product button{
@@ -492,30 +481,4 @@ flex: 0.8;
       text-transform: uppercase;
   
   }
-  h1 {
-    text-align: center;
-  }
-  
-  h2 {
-    margin-top: 20px;
-  }
-
-  p{
-    margin-bottom: 10px;
-            text-align: justify;
-  }
-
-  ol, ul {
-    text-align: left;
-    margin-left: 40px;
-}
-  
-  .content {
-    margin-top: 10px;
-    margin: 0;
-    padding: 20px;
-    font-family: Arial, sans-serif;
-    text-align:justify ;
-    line-height: 1.5;
-    font-size: large;
-  }
+ 
